playing around with generating friends list on load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,5 +81,12 @@
     padding-left: 16px;
 }
 
-       
-    
+#notif{
+    margin-left:20px;
+}
+
+#addrestaurant{
+    position: absolute;
+    right:5%;
+    bottom:35%;
+}     
