--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -17,16 +17,18 @@
 }
 
 /* geocoder styling */
-#floating-panel {
-position: absolute;
-top: 10px;
-left: 25%;
+#change-location-panel {
 z-index: 5;
-background-color: #fff;
+margin-left: 30px;
 padding: 5px;
-border: 1px solid #999;
 text-align: center;
-font-family: 'Roboto','sans-serif';
 line-height: 30px;
 padding-left: 10px;
+}
+#change-location-text{
+display: inline-block;
+line-height: 0;
+}
+#address{
+    margin-left: 5px
 }
