--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -11,7 +11,22 @@
     font-weight: bold;
 }
 .review-image {
-    width: 98px;
-    height: 98px;
+    width: 146px;
+    height: 146px;
     margin: 2px;
+}
+
+/* geocoder styling */
+#floating-panel {
+position: absolute;
+top: 10px;
+left: 25%;
+z-index: 5;
+background-color: #fff;
+padding: 5px;
+border: 1px solid #999;
+text-align: center;
+font-family: 'Roboto','sans-serif';
+line-height: 30px;
+padding-left: 10px;
 }
