change location button fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,3 +95,18 @@
     text-decoration: none;
     color:inherit;
 }
+
+/* geocoder styling */
+#floating-panel {
+
+color:white;
+}
+
+ #address-label, #address-div, #submit {
+    color: white;
+   
+}
+#address {
+     border-color: white;
+    
+}
