--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -1,11 +1,13 @@
 #map {
-    height: 500px;
-    overflow: auto;
+    height:100%;
+    width: 100%;
+    
 }
 .review-wrapper{
-    margin: 5px 0px 5px 0px;	
-    border-top: 1px dashed grey;
-    padding: 5px 0px 5px 0px		
+    margin: 5px 5px 5px 5px;    
+    border-top: 1px solid grey;
+    padding: 5px 0px 5px 0px;
+    line-height: 1;        
 }
 .review-author {
     font-weight: bold;
@@ -15,5 +17,4 @@
     height: 146px;
     margin: 2px;
 }
-
 
