--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,3 +138,29 @@ body, html{
     height:100%;
     width:100%;
 }
+.modalContainer {
+    position: "absolute";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.modalContent {
+    width: 45%;
+    position: relative;
+    display: block;
+    background-color: white;
+    margin: 40px auto;
+    padding: 20px;
+    line-height: 43px;
+}
+.modalBG {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: "black";
+        opacity: .8;
+        width: 100%;
+        height: 100%;
+        zIndex: 100;
+}
