--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
-
+.review-wrapper {
+    text-align: center;
+}
+.review-wrapper p {
+    margin:0;
+}
 .demo-list-control {
     width: 300px;
 }
@@ -139,9 +144,19 @@ body, html{
     width:100%;
 }
 .modalContainer {
-    position: "absolute";
+    position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+.modalBG {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: .8;
     width: 100%;
     height: 100%;
 }
@@ -153,14 +168,4 @@ body, html{
     margin: 40px auto;
     padding: 20px;
     line-height: 43px;
-}
-.modalBG {
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: "black";
-        opacity: .8;
-        width: 100%;
-        height: 100%;
-        zIndex: 100;
 }
