--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,8 +173,11 @@ body, html{
     background-color: rgb(103,58,183);
     color: white;
     margin: 5px;
+    border: 0;
+    padding: 8px;
 }
 .modalContent .thumbs-icons{
     width: 20px;
     margin: 0 1px 0 25px;
+    color: rgb(103,58,183);
 }
