add logout button, show userID

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,9 @@ color:white;
      border-color: white;
     
 }
-
+#logout {
+    display:none;
+}
 #footerid {
     display: table;
     text-align: center;
